--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "thinkster_django_angular_boilerplate",
+  "name": "Statume",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "chmod +x ./scripts/postInstall.sh && ./scripts/postInstall.sh"
-  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/brwr/thinkster-django-angular-boilerplate.git"
+    "url": "https://github.com/kkampardi/3dreamprint.git"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/brwr/thinkster-django-angular-boilerplate/issues"
-  },
-  "homepage": "https://github.com/brwr/thinkster-django-angular-boilerplate",
-  "dependencies": {
+  "devDependencies": {
     "bower": "^1.3.12",
     "gulp": "^3.8.9",
     "gulp-ng-annotate": "^0.3.3",
     "gulp-uglify": "^1.0.1"
+  },
+  "engines": {
+    "node": ">=0.10.0"
+  },
+  "scripts": {
+    "postinstall": "bower install",
+    "prestart": "npm install"
   }
 }
