--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
-
+amqp==1.4.9
+anyjson==0.3.3
 Babel==2.3.4
+billiard==3.3.0.23
+cairocffi==0.7.2
+CairoSVG==1.0.22
 celery==3.1.18
+cffi==1.7.0
+cssselect==0.9.2
 Django==1.8.6
+django-angular==0.8.2
 django-ckeditor==5.0.3
+django-paypal==0.2.5
 flower==0.9.1
+html5lib==0.9999999
+kombu==3.0.35
+lxml==3.6.0
 Pillow==3.3.0
 tornado==4.2
 django-paypal==0.2.5
