--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
   ],
   "dependencies": {
     "angular": "~1.3.1",
-    "angular-route": "~1.3.1"
+    "angular-route": "~1.3.1",
+    "angular-resource": "~1.4.8"
   },
   "devDependencies": {
     "angular-animate": "^1.5.7"
